objects/EUR_CRM_QuizCompletion__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Quiz_Completions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ActivityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit (EU)</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipName>Quiz_Completions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CompletionTime__c</fullName>
        <label>Completion Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_IsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_MobileId__c</fullName>
        <label>Mobile ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_QuizId__c</fullName>
        <label>Quiz</label>
        <referenceTo>EUR_CRM_Quiz__c</referenceTo>
        <relationshipName>Quiz_Completions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_QuizPartakerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quiz Partaker</label>
        <referenceTo>EUR_CRM_QuizPartaker__c</referenceTo>
        <relationshipName>Quiz_Completions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_RequiredQuestionsMissed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required questions missed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quiz_Completions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quiz Completion (EU)</label>
    <nameField>
        <displayFormat>QC-{0000000}</displayFormat>
        <label>Quiz Completion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Completions (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_Quiz_Completion</fullName>
        <active>true</active>
        <label>EUR Quiz Completion</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>